--- a/assets/css/hacktalks.css
+++ b/assets/css/hacktalks.css
@@ -42,6 +42,44 @@ body {
     line-height: 28px;
     text-align: center;
 }
+.previous-editions {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 26px;
+    height: 28px;
+    max-width: 200px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+}
+
+.previous-editions ul {
+    list-style-type: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: table
+}
+
+.previous-editions ul li {
+    display: table-cell;
+    text-align: center
+}
+
+.previous-editions ul a {
+    display: block;
+    text-decoration: none;
+    color: #5193FF;
+    transition:all 0.3s ease;
+    font-size: 16px
+}
+.previous-editions ul a:hover {
+    color: #FDB632;
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
 
 .subscribe-msg {
     margin-top: 60px;
