--- a/assets/css/hacktalks.css
+++ b/assets/css/hacktalks.css
@@ -236,3 +236,20 @@ body {
 #applyToSpeak{
     z-index: 100;
 }
+
+.intro{
+    color: #fff;
+    font-family: inherit;
+    font-size: 16px;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
+    text-rendering: optimizeLegibility;
+    color: #fff;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    max-width: 700px;
+    margin: 60px auto;
+}
