--- a/assets/css/hacktalks.css
+++ b/assets/css/hacktalks.css
@@ -240,16 +240,159 @@ body {
 .intro{
     color: #fff;
     font-family: inherit;
-    font-size: 16px;
-    font-size: 1rem;
     font-weight: 400;
-    margin-bottom: 20px;
-    margin-bottom: 1.25rem;
     text-rendering: optimizeLegibility;
-    color: #fff;
     font-size: 16px;
     line-height: 26px;
     text-align: center;
     max-width: 700px;
     margin: 60px auto;
 }
+
+.hacktalks-schedule {
+    padding-top: 80px;
+}
+.hacktalks-schedule h2 {
+    text-align: center;
+    margin-bottom: 60px;
+}
+.hacktalks-schedule .room {
+    line-height: 50px;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: bold;
+    padding-left: 16px;
+    margin-bottom: 50px;
+    padding-right: 20px;
+}
+.hacktalks-schedule .break {
+    background-repeat: no-repeat;
+    background-position: center right;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 17px;
+    padding: 8px;
+    padding-right: 30px;
+    margin-left: -20px;
+}
+.hacktalks-schedule .green .speech {
+    background-image: url("../images/bila_verde_linie@2x.png");
+}
+.hacktalks-schedule .green .speech.last {
+    background-image: url("../images/bila_verde@2x.png");
+}
+.hacktalks-schedule .green .room,
+.hacktalks-schedule .green .break {
+    background-color: #00BD5C;
+}
+.hacktalks-schedule .green .break {
+    background-image: url("../images/ribbon_margin@2x.jpg");
+}
+.hacktalks-schedule .yellow .speech {
+    background-image: url("../images/bila_galbena_linie@2x.png");
+}
+.hacktalks-schedule .yellow .speech.last {
+    background-image: url("../images/bila_galbena@2x.png");
+}
+.hacktalks-schedule .yellow .room,
+.hacktalks-schedule .yellow .break {
+    background-color: #FDB632;
+}
+.hacktalks-schedule .yellow .break {
+    background-image: url("../images/ribbon_margin_yellow@2x.jpg");
+}
+.hacktalks-schedule .red .speech {
+    background-image: url("../images/bila_rosie_linie@2x.png");
+}
+.hacktalks-schedule .red .speech.last {
+    background-image: url("../images/bila_rosie@2x.png");
+}
+.hacktalks-schedule .red .room,
+.hacktalks-schedule .red .break {
+    background-color: #F05926;
+}
+.hacktalks-schedule .red .break {
+    background-image: url("../images/ribbon_margin_red@2x.jpg");
+}
+.hacktalks-schedule .time {
+    color: #454564;
+    font-size: 16px;
+    line-height: 23px;
+    width: 43px;
+}
+.hacktalks-schedule .time.break-time {
+    line-height: 33px;
+}
+.hacktalks-schedule .time,
+.hacktalks-schedule .speech,
+.hacktalks-schedule .avatar,
+.hacktalks-schedule .info {
+    display: inline-block;
+    vertical-align: top;
+}
+.hacktalks-schedule .speech {
+    padding-left: 30px;
+    padding-right: 10px;
+    padding-bottom: 30px;
+    background-repeat: no-repeat;
+    background-position: 5px 0;
+    background-size: 22px;
+    max-width: 85%;
+}
+.hacktalks-schedule .speech h3 {
+    color: #454564;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+    margin: 0 0 12px;
+}
+.hacktalks-schedule .speech .info {
+    max-width: 80%;
+    padding-left: 5px;
+}
+.hacktalks-schedule .speech .avatar {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+}
+.hacktalks-schedule .speech .tag-line {
+    height: 16px;
+    border-radius: 100px;
+    background-color: #2F6AE0;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: bold;
+    line-height: 16px;
+    text-align: center;
+    display: inline-block;
+    padding: 0 6px;
+    vertical-align: top;
+    color: #fff;
+}
+.hacktalks-schedule .speech .name {
+    color: #454564;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+    margin-bottom: 0;
+    margin-top: -5px;
+}
+.hacktalks-schedule .speech .title {
+    color: #454564;
+    font-size: 14px;
+    line-height: 16px;
+}
+.hacktalks-schedule .details {
+    cursor: pointer;
+    transition:all 0.3s ease;
+}
+.hacktalks-schedule .details:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
