--- a/assets/css/hacktalks.css
+++ b/assets/css/hacktalks.css
@@ -7,7 +7,7 @@ body {
 }
 #intro {
     margin: 100px auto;
-    height: 100vh;
+    height: 70vh;
     min-height: 620px;
 }
 .coming-soon {
@@ -248,7 +248,7 @@ body {
     line-height: 26px;
     text-align: center;
     max-width: 700px;
-    margin: 60px auto;
+    margin: 30px auto 0px auto;
 }
 
 .hacktalks-schedule {
